--- a/sass/_main.sass
+++ b/sass/_main.sass
@@ -29,8 +29,8 @@ body
 		line-height: 80px
 	h2
 		font-size: 30px
-		line-height: 30px
-		margin: 24px 0px 14px 0px
+		line-height: 32px
+		margin: 18px 0px 17px 0px
 	p
 		font-size: 13px
 		line-height: 1.5
@@ -59,7 +59,6 @@ body
 	display: inline-block
 	height: 32px
 	vertical-align: middle
-	padding-bottom: 4px
 	span
 		color: $font-color
 		font-family: $font-for-copy
